--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,8 +17,9 @@ install:
 build: off
 build_script:
     - python -u setup.py clean
-    - python -u setup.py bdist_wheel --static-deps
+    - python -u setup.py bdist_wheel test --static-deps
 
 test: off
 test_script:
   - ps: Get-ChildItem dist\*.whl | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
+  - python -u test.py
